Correction bugs : tranfo div en a et supp de no-wrap sur p6

--- a/styles_css/page6.css
+++ b/styles_css/page6.css
@@ -22,7 +22,6 @@ body .contenu-texte {
   margin-left: 10vw;
   margin-right: 10vw;
   text-wrap: balance;
-  text-wrap: nowrap !important;
 }
 
 /*# sourceMappingURL=page6.css.map */
