--- a/styles_sass/_page6.scss
+++ b/styles_sass/_page6.scss
@@ -9,7 +9,6 @@ body {
         height: 100vh;
         &-texte {
             @include titres_analyse();
-            text-wrap: nowrap !important;
         }
     }
 }
